--- a/frontend/src/css/page.css
+++ b/frontend/src/css/page.css
@@ -2,3 +2,14 @@
     max-width: 500px;
     margin: auto;
 }
+
+.next {
+    display: flex;
+    flex-direction: row;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    margin-left: 50px;
+}
