--- a/frontend/src/css/page.css
+++ b/frontend/src/css/page.css
@@ -1,6 +1,10 @@
 .centerdiv {
+    background-color: white;
     max-width: 500px;
     margin: auto;
+    padding: 20px;
+    border-radius: 25px;
+    border: 5px solid black;
 }
 
 .next {
@@ -13,3 +17,5 @@
     flex-direction: column;
     margin-left: 50px;
 }
+
+
