--- a/frontend/src/css/page.css
+++ b/frontend/src/css/page.css
@@ -22,4 +22,21 @@
     margin-left: 10px;
 }
 
+.bg {
+    background-image: url("las.jpg");
+    height: 100vh;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+.result {
+    margin-top: 10px;
+    font-weight:750;
+}
+
+.link {
+    margin-left: 25px;
+}
+
 
