--- a/frontend/src/css/page.css
+++ b/frontend/src/css/page.css
@@ -78,12 +78,15 @@
 
 body {
     background-image: url("las.jpg");
-    height: 100%;
+    height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
 }
 
+.checkBody {
+    height: 100%;
+}
 .result {
     margin-top: 10px;
     font-weight:750;
