--- a/frontend/src/css/page.css
+++ b/frontend/src/css/page.css
@@ -23,9 +23,13 @@
     display: grid;
     grid-area: content;
     grid-template-columns: 50% 50%;
-    grid-template-rows: repeat(10, 1fr);
     grid-auto-flow: column;
-
+}
+.mature {
+    grid-template-rows: repeat(9, 1fr);
+}
+.young {
+    grid-template-rows: repeat(10, 1fr);
 }
 .contentName {
     grid-column: 1 / span 1;
