--- a/frontend/src/css/page.css
+++ b/frontend/src/css/page.css
@@ -81,7 +81,7 @@
 }
 
 body {
-    background-image: url("las.jpg");
+    background-image: url("forest.jpeg");
     height: 100vh;
     background-position: center;
     background-repeat: no-repeat;
